# fake-standup

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  create_media.py  create_speech.py  create_video.py  environment.yml  pyproject.toml  run.py  script.py  setup.sh  test.ipynb
Wav2Lip/face_detection/: api.py
speech_files/: text.txt
tests/: test_main.py
video/: enter_zoom.py  fake_error_connection.py  listen.py  script.py  test.ipynb
voice/: demo_cli.py  encoder_preprocess.py  encoder_train.py  setup.py  synthesizer_preprocess_audio.py  synthesizer_preprocess_embeds.py  synthesizer_train.py  tts.py  vocoder_preprocess.py  vocoder_train.py
voice/encoder/: audio.py  inference.py  model.py  preprocess.py  train.py  visualizations.py
voice/encoder/data_objects/: __init__.py  speaker.py  speaker_batch.py  speaker_verification_dataset.py
voice/synthesizer/: inference.py  preprocess.py  synthesize.py  synthesizer_dataset.py  train.py
voice/synthesizer/utils/: cleaners.py  text.py
voice/toolbox/: __init__.py  ui.py
voice/vocoder/: audio.py  gen_wavernn.py  hparams.py  inference.py  train.py  vocoder_dataset.py
voice/vocoder/models/: fatchord_version.py
