[tool.poetry]
name = "fake-standup"
version = "0.1.0"
description = ""
authors = ["Ryan D <ryansdowning1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
torch = "^1.11.0"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
numba = "^0.55.1"
opencv-python = "^4.5.5"
opencv-contrib-python = "^4.5.5"
librosa = "^0.9.1"
inflect = "^5.5.2"
matplotlib = "^3.5.1"
Pillow = "^9.1.0"
PyQt5 = "^5.15.6"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
sounddevice = "^0.4.4"
SoundFile = "^0.10.3"
umap-learn = "^0.5.2"
Unidecode = "^1.3.4"
urllib3 = "^1.26.9"
visdom = "^0.1.8"
webrtcvad = "^2.0.10"
numpy = "1.21.5"
moviepy = "^1.0.3"
pyvirtualcam = "^0.9.1"
pygame = "^2.1.2"
PyAudio = "^0.2.11"
google = "^3.0.0"
google-api-core = "^2.7.1"
google-auth = "^2.6.3"
google-cloud = "^0.34.0"
google-cloud-speech = "^2.13.1"
googleapis-common-protos = "^1.56.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
